focus, form & footer section added

--- a/index.html
+++ b/index.html
@@ -153,6 +153,56 @@
     </div>
 
 
+    <!----focus section------>
+    <div class="fc-main">
+
+        <section class="focus">
+            <h1>Ready to focus better</h1>
+            <p>This tamplate instantly leveled up our presense." -Studio Vertex</p>
+            <button class="focus-btn primary-button">Get Started Free</button><br>
+            <img src="/B12A01-landing-launchpad/Assets/wc-big.png" alt="" class="focus-img">
+        </section>
+    </div>
+
+
+    <!----form section------>
+    <div class="frm-main">
+
+        <section class="form-sec">
+            <div class="form-head">
+                <h1>Let's Get In Touch</h1>
+            </div>
+            <div class="form">
+                <span>Email</span><br>
+                <input type="email" name="Email" id="" placeholder="example@gmail.com" class="in-item"><br>
+                <span>Name</span><br>
+                <input type="text" name="Name" id="" placeholder="full Name" class="in-item">
+                <span>Message</span><br>
+                <textarea name="message" id="" placeholder="write your message...." class="in-item2"></textarea><br>
+                <button class="form-btn primary-btn">Get in Touch</a></button>
+            </div>
+        </section>    
+        </div>  
+
+
+    <!----footer section------>
+    <div class="foot-main">
+     
+        <section class="footer">
+            <div class="ft-main">
+                <h1 class="logo">LOGO</h1>
+                <p>Ready to elevate your online presense! Contact us today to discus your project and discover how we can bring your vision to life</p>
+            </div>
+            <div class="link">
+                <a href="">Home</a>
+                <a href="">About</a>
+                <a href="">How it Works</a>
+                <a href="">Services</a>
+            </div>
+        </section>
+    </div>    
+
+
 </body>
 
 </html>
