font correction of buttons

--- a/index.html
+++ b/index.html
@@ -9,10 +9,6 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&family=TikTok+Sans:opsz,wght@12..36,300..900&display=swap" rel="stylesheet">
-
-    <!-- <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=TikTok+Sans:opsz,wght@12..36,300..900&display=swap" rel="stylesheet"> -->
     <link rel="stylesheet" href="Styles/style.css">
    
 </head>
@@ -45,7 +41,7 @@
     <section class="action">
         <div class="act-dis">
             <div class="ac-head">
-                 <h3>See it an Action</h3>
+                 <h3>See It an Action</h3>
                  <p>Explore the live preview and imagine your brand in this bold new look.</p>
                  <button class="btn3 primary-button">Launch Live Preview</button>
 
@@ -179,7 +175,7 @@
                 <input type="text" name="Name" id="" placeholder="full Name" class="in-item">
                 <span>Message</span><br>
                 <textarea name="message" id="" placeholder="write your message...." class="in-item2"></textarea><br>
-                <button class="form-btn primary-btn">Get in Touch</a></button>
+                <button class="form-btn primary-button">Get in Touch</a></button>
             </div>
         </section>    
         </div>  
