final finised version

--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
     </div>
 
 
-    <!----card section------>
+    <!----card section---->
     <div class="card-class">
 
         <section class="card-sec">
@@ -161,7 +161,7 @@
     </div>
 
 
-    <!----form section------>
+    <!----form section----->
     <div class="frm-main">
 
         <section class="form-sec">
