--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body>
 
     <!----banner section------>
-    <section class="banner-main">
+    <section class="banner-main" style="background-image: url(B12A01-landing-launchpad/Assets/Hero-bg.png);">
         <div>
             <nav>
                 <div class="logo-sight">
